tdf#154956 sw: delete bookmarks at end if whole node is selected

Exposed by LO 7.2.2 commit 4bf04dea9afb30a9395e80b07a81d1908937ee8b
Author: Michael Stahl on Fri Aug 27 14:38:18 2021 +0200
    tdf#128106 sw: copy bookmarks at start if whole node is copied

Change-Id: I9205463f9beb3704eeb63fe7556103230ba7283d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150772
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>